## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
	$(TPAD_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = tpad

tpad_SOURCES = \
	../autogen.sh \
	def.h \
	error_warn.c \
	error_warn.h \
	include.h \
	main.c \
	main.h \	
	malloc.c \
	malloc.h \
	tpad_config.c \
	tpad_config.h \
	tpad_quit.c \
	tpad_quit.h \
	tpad_doc.c \
	tpad_doc.h \
	tpad_ui.c \
	tpad_ui.h \
	tpad_unity.c \
	tpad_unity.h \
	tpad_find.c \
	tpad_find.h \
	tpad_find_and_replace.c \
	tpad_find_and_replace.h \
	tpad_show_file.c \
	tpad_show_file.h \
	tpad_buff.c \
	tpad_buff.h \
	tpad_title.c \
	tpad_title.h \
	tpad_toggle.c \
	tpad_toggle.h \
	tpad_hconnect.c \
	tpad_hconnect.h \
	tpad_about.c \
	tpad_about.h \
	tpad_history.c \
	tpad_history.h \
	tpad_font.c \
	tpad_font.h \
	tpad_lang.c \
	tpad_lang.h \
	tpad_spelling.c \
	tpad_spelling.h \
	tpad_file.c \
	tpad_file.h \
	tpad_new_file.c \
	tpad_new_file.h \
	tpad_open_file.c \
	tpad_open_file.h \
	tpad_magic.c \
	tpad_magic.h \
	tpad_fp.c \
	tpad_fp.h \
	tpad_headers.h \
	tpad_logo.h \
	tpad_open_guard.c \
	tpad_open_guard.h \
	tpad_pref.c \
	tpad_pref.h \
	tpad_print.c \
	tpad_print.h \
	tpad_save.c \
	tpad_save.h \
	tpad_tree.c \
	tpad_tree.h \
	tpad_watch.c \
	tpad_watch.h \
	tpad_modbal.h \
	tpad_modbal.c \
	tpad_spawn.c \
	tpad_spawn.h \
	tpad_string.c \
	tpad_string.h \
	tpad_textstats.c \
	tpad_textstats.h \
	tpad_hash.h \
	tpad_hash.c \
	threading.c \
	polarssl/check_config.h \
	polarssl/config.h \
	polarssl/md5.h \
	polarssl/platform.h \
	polarssl/sha256.h \
	polarssl/sha512.h \
	polarssl/threading.h \
	polarssl/timing.h \
	polarssl/version.h \
	polarssl/base64.h \
	sha512.c \
	sha256.c \
	md5.c \
	base64.c

tpad_CFLAGS = -D_XOPEN_SOURCE=600 

tpad_LDFLAGS = 

tpad_LDADD = $(TPAD_LIBS) \
	-lpthread \
	-lm \
	-lmagic

